fix: overflow issue in container

--- a/exercise-9-animations/src/styles/style.css
+++ b/exercise-9-animations/src/styles/style.css
@@ -7,6 +7,8 @@
 .background-scenario{
     height: 100vh;
     width: 100vw;
+    position: relative;
+    overflow-y: hidden;
     background-image: url('../assets/background.png');
     background-repeat: no-repeat;
     background-size: cover;
